Add authgear resolver server helm template

--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -28,7 +28,16 @@ adminServer:
   resources:
     requests:
       cpu: 100m
-      memory: 64Mi
+      memory: 32Mi
     limits:
-      cpu: 500m
-      memory: 128Mi
+      cpu: 300m
+      memory: 64Mi
+
+resolverServer:
+  resources:
+    requests:
+      cpu: 100m
+      memory: 32Mi
+    limits:
+      cpu: 300m
+      memory: 64Mi
