--- a/helm/templates/authgear-portal-server.yaml
+++ b/helm/templates/authgear-portal-server.yaml
@@ -77,6 +77,28 @@ spec:
           value: {{ .Values.portalServer.env.ADMIN_API_ENDPOINT | quote }}
         - name: ADMIN_API_HOST_TEMPLATE
           value: {{ .Values.portalServer.env.ADMIN_API_HOST_TEMPLATE | quote }}
+        - name: APP_HOST_TEMPLATE
+          value: {{ .Values.portalServer.env.APP_HOST_TEMPLATE | quote }}
+        - name: APP_SECRET_DATABASE_URL
+          value: {{ .Values.portalServer.env.APP_SECRET_DATABASE_URL | quote }}
+        - name: APP_SECRET_DATABASE_SCHEMA
+          value: {{ .Values.portalServer.env.APP_SECRET_DATABASE_SCHEMA | quote }}
+        - name: APP_SECRET_REDIS_URL
+          value: {{ .Values.portalServer.env.APP_SECRET_REDIS_URL | quote }}
+        - name: APP_SECRET_SMTP_HOST
+          value: {{ .Values.portalServer.env.APP_SECRET_SMTP_HOST | quote }}
+        - name: APP_SECRET_SMTP_PORT
+          value: {{ .Values.portalServer.env.APP_SECRET_SMTP_PORT | quote }}
+        - name: APP_SECRET_SMTP_MODE
+          value: {{ .Values.portalServer.env.APP_SECRET_SMTP_MODE | quote }}
+        - name: APP_SECRET_SMTP_USERNAME
+          value: {{ .Values.portalServer.env.APP_SECRET_SMTP_USERNAME | quote }}
+        - name: APP_SECRET_SMTP_PASSWORD
+          value: {{ .Values.portalServer.env.APP_SECRET_SMTP_PASSWORD | quote }}
+        - name: APP_SECRET_TWILIO_ACCOUNT_SID
+          value: {{ .Values.portalServer.env.APP_SECRET_TWILIO_ACCOUNT_SID | quote }}
+        - name: APP_SECRET_TWILIO_AUTH_TOKEN
+          value: {{ .Values.portalServer.env.APP_SECRET_TWILIO_AUTH_TOKEN | quote }}
         ports:
         - name: http
           containerPort: 3003
