Support new required portal environment variables

--- a/helm/templates/authgear-portal-server.yaml
+++ b/helm/templates/authgear-portal-server.yaml
@@ -99,6 +99,8 @@ spec:
           value: {{ .Values.portalServer.env.APP_SECRET_TWILIO_ACCOUNT_SID | quote }}
         - name: APP_SECRET_TWILIO_AUTH_TOKEN
           value: {{ .Values.portalServer.env.APP_SECRET_TWILIO_AUTH_TOKEN | quote }}
+        - name: DATABASE_URL
+          value: {{ .Values.portalServer.env.DATABASE_URL | quote }}
         ports:
         - name: http
           containerPort: 3003
