--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -65,6 +65,7 @@ portalServer:
     MAIL_REPLY_TO: __replace_me__
     CONFIG_SOURCE_TYPE: "kubernetes"
     CONFIG_SOURCE_KUBE_NAMESPACE: "authgear-apps"
+    AUTHGEAR_APP_ID: __replace_me__
     AUTHGEAR_CLIENT_ID: __replace_me__
     AUTHGEAR_ENDPOINT: https://__replace_me__.example.com
     ADMIN_API_TYPE: "static"
