--- a/helm/templates/authgear-main-server.yaml
+++ b/helm/templates/authgear-main-server.yaml
@@ -54,10 +54,20 @@ spec:
         {{- include "authgear.mainSelectorLabels" . | nindent 8 }}
     spec:
       serviceAccountName: {{ include "authgear.nameMain" . | quote }}
+      {{ if .Values.appCustomResources.path }}
+      volumes:
+      - name: custom-resources
+        {{- toYaml .Values.appCustomResources.volume | nindent 8 }}
+      {{ end }}
       containers:
       - name: authgear-main-server
         image: {{ .Values.mainServer.image | quote }}
         args: ["authgear", "start", "main"]
+        {{ if .Values.appCustomResources.path }}
+        volumeMounts:
+        - name: custom-resources
+          mountPath: {{ .Values.appCustomResources.path | quote }}
+        {{ end }}
         env:
         - name: TRUST_PROXY
           value: {{ .Values.mainServer.env.TRUST_PROXY | quote }}
@@ -71,6 +81,8 @@ spec:
           value: {{ .Values.mainServer.env.CONFIG_SOURCE_TYPE | quote }}
         - name: CONFIG_SOURCE_KUBE_NAMESPACE
           value: {{ .Values.mainServer.env.CONFIG_SOURCE_KUBE_NAMESPACE | quote }}
+        - name: CUSTOM_RESOURCE_DIRECTORY
+          value: {{ .Values.appCustomResources.path | quote }}
         ports:
         - name: http
           containerPort: 3000
