--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -73,16 +73,6 @@ portalServer:
     ADMIN_API_ENDPOINT: __replace_me__.example.com
     ADMIN_API_HOST_TEMPLATE: "{{ .AppID }}.example.com"
     APP_HOST_SUFFIX: ".example.com"
-    APP_SECRET_DATABASE_URL: postgres://localhost
-    APP_SECRET_DATABASE_SCHEMA: public
-    APP_SECRET_REDIS_URL: redis://localhost/0
-    APP_SECRET_SMTP_HOST: localhost
-    APP_SECRET_SMTP_PORT: "587"
-    APP_SECRET_SMTP_MODE: normal
-    APP_SECRET_SMTP_USERNAME: __replace_me__
-    APP_SECRET_SMTP_PASSWORD: __replace_me__
-    APP_SECRET_TWILIO_ACCOUNT_SID: __replace_me__
-    APP_SECRET_TWILIO_AUTH_TOKEN: __replace_me__
     APP_KUBERNETES_DEFAULT_DOMAIN_TLS_CERT_TYPE: none
     APP_KUBERNETES_DEFAULT_DOMAIN_TLS_CERT_SECRET_NAME: __replace_me__
     APP_KUBERNETES_DEFAULT_DOMAIN_TLS_CERT_ISSUER_KIND: Issuer
@@ -91,6 +81,11 @@ portalServer:
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_SECRET_NAME: __replace_me__
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_ISSUER_KIND: Issuer
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_ISSUER_NAME: __replace_me__
-    APP_BRANDING_APP_NAME: __replace_me__
-    APP_BRANDING_EMAIL_DEFAULT_SENDER: no-reply@example.com
-    APP_BRANDING_SMS_DEFAULT_SENDER: __replace_me__
+
+appCustomResources:
+  path: ""
+  volume: {}
+
+portalCustomResources:
+  path: ""
+  volume: {}
