--- a/helm/values.yaml
+++ b/helm/values.yaml
@@ -81,6 +81,7 @@ portalServer:
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_SECRET_NAME: __replace_me__
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_ISSUER_KIND: Issuer
     APP_KUBERNETES_CUSTOM_DOMAIN_TLS_CERT_ISSUER_NAME: __replace_me__
+    MAX_OWNED_APPS: "-1"
 
 appCustomResources:
   path: ""
