--- a/authgear/templates/authgear-main-server.yaml
+++ b/authgear/templates/authgear-main-server.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "authgear.nameMain" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 automountServiceAccountToken: true
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -12,7 +12,7 @@ metadata:
   name: {{ include "authgear.nameMain" . | quote }}
   namespace: {{ .Values.mainServer.env.CONFIG_SOURCE_KUBE_NAMESPACE | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 rules:
 - apiGroups: [""]
   resources: ["configmaps", "secrets"]
@@ -27,7 +27,7 @@ metadata:
   name: {{ include "authgear.nameMain" . | quote }}
   namespace: {{ .Values.mainServer.env.CONFIG_SOURCE_KUBE_NAMESPACE | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "authgear.nameMain" . | quote }}
@@ -42,7 +42,7 @@ kind: Deployment
 metadata:
   name: {{ include "authgear.nameMain" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -103,7 +103,7 @@ kind: Service
 metadata:
   name: {{ include "authgear.nameMain" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 spec:
   ports:
   - port: 80
