--- a/authgear/templates/authgear-portal-server.yaml
+++ b/authgear/templates/authgear-portal-server.yaml
@@ -3,7 +3,7 @@ kind: ServiceAccount
 metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 automountServiceAccountToken: true
 ---
 apiVersion: rbac.authorization.k8s.io/v1
@@ -12,7 +12,7 @@ metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   namespace: {{ .Values.mainServer.env.CONFIG_SOURCE_KUBE_NAMESPACE | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 rules:
 - apiGroups: [""]
   resources: ["configmaps", "secrets"]
@@ -30,7 +30,7 @@ metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   namespace: {{ .Values.mainServer.env.CONFIG_SOURCE_KUBE_NAMESPACE | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 subjects:
 - kind: ServiceAccount
   name: {{ include "authgear.namePortal" . | quote }}
@@ -45,7 +45,7 @@ kind: Deployment
 metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 spec:
   replicas: 1
   selector:
@@ -173,7 +173,7 @@ kind: Service
 metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
 spec:
   ports:
   - port: 80
@@ -188,7 +188,7 @@ kind: Ingress
 metadata:
   name: {{ include "authgear.namePortal" . | quote }}
   labels:
-    {{- include "helm.labels" . | nindent 4 }}
+    {{- include "authgear.labels" . | nindent 4 }}
   annotations:
     {{- toYaml .Values.portalServer.ingress.annotations | nindent 4 }}
 spec:
